--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Immigration to Muscatine, Iowa
 tagline: 
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: This is an exhibit of digital items related to the history of immigration to Muscatine, Iowa.
+description: This exhibit is a collection of digital items related to the history of immigration to Muscatine, Iowa. Immigrants to Muscatine tended to arrive in "waves": members of a certain ethnic group would immigrate to Muscatine in large numbers over a certain period of time. This exhibit seeks to determine which ethnic groups came to Muscatine in waves and when those waves were.
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Christian Brauns, Abby Johnson, and Grace Stephens
 
